fix: double scroll issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,6 @@
 @layer base {
   html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
   }
 
   html,
